k8s-yaml/event-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-deploy
spec:
  replicas: 2 
  selector:
    matchLabels:
      app: event
  template:
    metadata:
      labels:
        app: event
    spec:           
      containers:
      - name: eventapi
        image: azuredeveloper/eventapi:latest        
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
