k8s-yaml/identity-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity-deploy
spec:
  replicas: 2 
  selector:
    matchLabels:
      app: identity
  template:
    metadata:
      labels:
        app: identity
    spec:           
      containers:
      - name: identityapi
        image: azuredeveloper/identityapi:latest        
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
