k8s-yaml/fe-engress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: frontend.569cf974d82046338fbf.southeastasia.aksapp.io
    http:
      paths:
      - backend:
          serviceName: frontend
          servicePort: 80
        path: /
